--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="Data\links.csv" />
+    <None Remove="Data\movie.json" />
     <None Remove="Data\movies.csv" />
     <None Remove="Data\ratings.csv" />
     <None Remove="Data\tags.csv" />
@@ -18,6 +19,9 @@
 
   <ItemGroup>
     <Content Include="Data\links.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\movie.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\movies.csv">
