--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Data\links.csv" />
     <None Remove="Data\movie.json" />
+    <None Remove="Data\movie.update.json" />
     <None Remove="Data\movies.csv" />
     <None Remove="Data\ratings.csv" />
     <None Remove="Data\tags.csv" />
@@ -19,6 +20,9 @@
 
   <ItemGroup>
     <Content Include="Data\links.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\movie.update.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\movie.json">
