--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="commands\query\genre-animation.json" />
     <None Remove="commands\query\title-story.json" />
     <None Remove="Data\links.csv" />
     <None Remove="Data\movie.json" />
@@ -21,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="commands\query\genre-animation.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="commands\query\title-story.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
