--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="commands\query\genre-animation.json" />
+    <None Remove="commands\query\genre-Sci-Fi.json" />
+    <None Remove="commands\query\genre-Sci.json" />
     <None Remove="commands\query\title-story.json" />
     <None Remove="Data\links.csv" />
     <None Remove="Data\movie.json" />
@@ -22,7 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="commands\query\genre-animation.json">
+    <Content Include="commands\query\genre-Sci-Fi.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="commands\query\genre-Sci.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="commands\query\title-story.json">
