--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -11,15 +11,19 @@
     <None Remove="commands\query\genre-Sci-Fi.json" />
     <None Remove="commands\query\genre-Sci.json" />
     <None Remove="commands\query\title-story.json" />
+    <None Remove="Data\film_to_franchise.txt" />
     <None Remove="Data\links.csv" />
     <None Remove="Data\movie.json" />
     <None Remove="Data\movie.update.1.json" />
     <None Remove="Data\movie.update.json" />
+    <None Remove="Data\movies-series.txt" />
     <None Remove="Data\movies.csv" />
     <None Remove="Data\ratings.csv" />
     <None Remove="Data\tags.csv" />
+    <None Remove="Indices\film_to_franchise.json" />
     <None Remove="Indices\idx-movie-props.json" />
     <None Remove="Indices\idx-movie.json" />
+    <None Remove="Indices\idx-movies-series.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +34,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="commands\query\title-story.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Data\film_to_franchise.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\links.csv">
@@ -44,6 +51,9 @@
     <Content Include="commands\upsert\movie.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Data\movies-series.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Data\movies.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -51,6 +61,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Data\tags.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Indices\film_to_franchise.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Indices\idx-movies-series.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Indices\idx-movie-props.json">
