--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -28,6 +28,7 @@
     <None Remove="003-flatten\commands\query\partial.json" />
     <None Remove="003-flatten\data\log-1.json" />
     <None Remove="003-flatten\data\log-2.json" />
+    <None Remove="003-flatten\data\log-3.json" />
     <None Remove="003-flatten\indices\idx-flatten.json" />
     <None Remove="002-parent-child\commands\query\has-child-film-by-title.json" />
     <None Remove="002-parent-child\commands\query\has-child-movie-by-title.json" />
@@ -95,6 +96,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="003-flatten\data\log-1.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="003-flatten\data\log-3.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="003-flatten\data\log-2.json">
