--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -44,6 +44,8 @@
     <None Remove="002-parent-child\data\movies-series.txt" />
     <None Remove="002-parent-child\indices\film_to_franchise.json" />
     <None Remove="002-parent-child\indices\idx-movies-series.json" />
+    <None Remove="004-problems\data\json-as-object-collision.json" />
+    <None Remove="004-problems\data\json-as-object.json" />
     <None Remove="004-problems\data\json-message-issue.json" />
     <None Remove="004-problems\data\port-none.json" />
     <None Remove="004-problems\data\port-numeric-as-string.json" />
@@ -106,6 +108,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="004-problems\commands\query\partial.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="004-problems\data\json-as-object-collision.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="004-problems\data\json-as-object.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="004-problems\data\json-message-issue.json">
