--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="006-sort\commands\query\sort-star.json" />
+    <None Remove="006-sort\data\links.csv" />
+    <None Remove="006-sort\data\movies.csv" />
+    <None Remove="006-sort\data\ratings.csv" />
+    <None Remove="006-sort\data\tags.csv" />
     <None Remove="005-queries\commands\query\bool-must-title-filter-year.json" />
     <None Remove="005-queries\commands\query\star-phrase-wars-slop.json" />
     <None Remove="005-queries\commands\query\star-phrase-wars.json" />
@@ -62,9 +67,28 @@
     <None Remove="004-problems\indices\idx-problems.json" />
     <None Remove="004-problems\indices\ignore_malformed.json" />
     <None Remove="005-queries\indices\idx-queries.json" />
+    <None Remove="006-sort\indices\idx-sort.json" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="006-sort\commands\query\sort-star.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="006-sort\data\links.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="006-sort\data\movies.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="006-sort\data\ratings.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="006-sort\data\tags.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="006-sort\indices\idx-sort.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="005-queries\commands\query\star-phrase-wars-slop.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
