--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -8,15 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="005-queries\commands\query\bool-complex-filter.json" />
     <None Remove="006-sort\commands\query\sort-star.json" />
     <None Remove="006-sort\data\links.csv" />
     <None Remove="006-sort\data\movies.csv" />
     <None Remove="006-sort\data\ratings.csv" />
     <None Remove="006-sort\data\tags.csv" />
     <None Remove="005-queries\commands\query\bool-must-title-filter-year.json" />
-    <None Remove="005-queries\commands\query\star-phrase-wars-slop.json" />
-    <None Remove="005-queries\commands\query\star-phrase-wars.json" />
-    <None Remove="005-queries\commands\query\star-wars.json" />
     <None Remove="005-queries\data\links.csv" />
     <None Remove="005-queries\data\movies.csv" />
     <None Remove="005-queries\data\ratings.csv" />
@@ -71,6 +69,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="005-queries\commands\query\bool-complex-filter.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="006-sort\commands\query\sort-star.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -87,15 +88,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="006-sort\indices\idx-sort.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="005-queries\commands\query\star-phrase-wars-slop.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="005-queries\commands\query\star-phrase-wars.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="005-queries\commands\query\star-wars.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="005-queries\commands\query\bool-must-title-filter-year.json">
