--- a/ElasticTests/ElasticTests.csproj
+++ b/ElasticTests/ElasticTests.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="007-fuzzy\commands\query\fuzzy-of-2.json" />
+    <None Remove="007-fuzzy\commands\query\fuzzy-of-auto-short.json" />
+    <None Remove="007-fuzzy\commands\query\fuzzy-of-auto.json" />
+    <None Remove="007-fuzzy\data\links.csv" />
+    <None Remove="007-fuzzy\data\movies.csv" />
+    <None Remove="007-fuzzy\data\ratings.csv" />
+    <None Remove="007-fuzzy\data\tags.csv" />
+    <None Remove="007-fuzzy\indices\idx-fuzzy.json" />
     <None Remove="005-queries\commands\query\bool-complex-filter.json" />
     <None Remove="005-queries\commands\query\star-phrase-wars-slop.json" />
     <None Remove="005-queries\commands\query\star-phrase-wars.json" />
@@ -72,6 +80,30 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="007-fuzzy\commands\query\fuzzy-of-auto-short.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="007-fuzzy\commands\query\fuzzy-of-auto.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="007-fuzzy\commands\query\fuzzy-of-2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="007-fuzzy\data\links.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="007-fuzzy\data\movies.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="007-fuzzy\data\ratings.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="007-fuzzy\data\tags.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="007-fuzzy\indices\idx-fuzzy.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="005-queries\commands\query\bool-complex-filter.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
